--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,16 @@ dependencies:
   rxdart: 0.22.2
   http: any
   flutter_dotenv: ^3.1.0
+  flutter_launcher_icons: "^0.8.0"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
