--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,20 +18,23 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  rxdart: 0.22.2
-  http: any
-  flutter_dotenv: ^3.1.0
-  flutter_launcher_icons: "^0.8.0"
+  rxdart: 0.26.0
+  http: 0.13.1
+  flutter_dotenv: ^4.0.0-nullsafety.0
+  flutter_launcher_icons: ^0.8.0
+  flutter_bloc: ^7.0.0
+  equatable: any
+  provider: any
+  intl: any
 
 dev_dependencies:
   flutter_test:
